исправил ошибку открытия приложения

--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -71,12 +71,12 @@
                 android:maxLength="6"
                 android:maxLines="1" />
 
-            <!--<Button
-                android:id="@+id/recognize_number_camera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="С камеры" />-->
+            <!--<Button-->
+            <!--android:id="@+id/recognize_number_camera"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:text="С камеры" />-->
 
             <TextView
                 android:id="@+id/DateOfIssueTextView"
@@ -99,7 +99,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:inputType="date"
                     android:maxLength="10"
                     android:maxLines="1"></EditText>
 
@@ -132,24 +131,26 @@
                 android:inputType="number"
                 android:maxLength="5"
                 android:maxLines="1" />
-        </LinearLayout>
 
+            <Button
+                android:id="@+id/check_button"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom|center"
+                android:background="@drawable/check_btn_shadow"
+                android:paddingTop="10dp"
+                android:text="@string/btn_check"
+                android:textColor="@drawable/text_button" />
+
+        </LinearLayout>
     </ScrollView>
 
     <!--<LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
-
-        <Button
-            android:id="@+id/check_button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/check_btn_shadow"
-            android:text="@string/btn_check"
-            android:textColor="@drawable/text_button" />
 
         <View
             android:id="@+id/bottom_menu_border"
@@ -157,10 +158,9 @@
             android:layout_height="1dp"
             android:background="@color/bottom_menu_border" />
 
-        &lt;!&ndash;<LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="74dp"
-            android:id="@+id/menu"
             android:orientation="horizontal">
 
             &lt;!&ndash;<View&ndash;&gt;
@@ -224,6 +224,6 @@
                 &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
                 &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
-        </LinearLayout>&ndash;&gt;
+        </LinearLayout>
     </LinearLayout>-->
 </RelativeLayout>
