--- a/app/src/main/res/layout/activity_fine.xml
+++ b/app/src/main/res/layout/activity_fine.xml
@@ -100,6 +100,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="text" />
+
+
+            <Button
+                android:id="@+id/check_button"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/check_btn_shadow"
+                android:text="@string/btn_check"
+                android:textColor="@drawable/text_button" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"></View>
+
         </LinearLayout>
     </ScrollView>
 
@@ -107,17 +122,9 @@
     <LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
-
-        <Button
-            android:id="@+id/check_button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/check_btn_shadow"
-            android:text="@string/btn_check"
-            android:textColor="@drawable/text_button" />
 
         <View
             android:id="@+id/bottom_menu_border"
