--- a/app/src/main/res/layout/activity_question_next.xml
+++ b/app/src/main/res/layout/activity_question_next.xml
@@ -26,8 +26,8 @@
                 android:id="@+id/RecipientTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_gravity="center_vertical"
+
                 android:layout_weight="1"
                 android:text="Обращение адресовано"
                 android:textColor="@color/black"
@@ -73,8 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:inputType="text"
-                android:minLines="3" />
+                android:inputType="text" />
 
             <TextView
                 android:id="@+id/FileTextView"
@@ -99,7 +98,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-
                 android:paddingTop="0dp"
                 android:text="Введите символы с картинки"
                 android:textColor="@color/black"
@@ -118,6 +116,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="text" />
+
+
+            <Button
+                android:id="@+id/CheckButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/check_btn_shadow"
+                android:text="@string/btn_send"
+                android:textColor="@drawable/text_button" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"></View>
+
         </LinearLayout>
     </ScrollView>
 
@@ -125,17 +138,9 @@
     <LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
-
-        <Button
-            android:id="@+id/CheckButton"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/check_btn_shadow"
-            android:text="@string/btn_send"
-            android:textColor="@drawable/text_button" />
 
         <View
             android:id="@+id/bottom_menu_border"
