--- a/app/src/main/res/layout/activity_auto.xml
+++ b/app/src/main/res/layout/activity_auto.xml
@@ -73,24 +73,30 @@
                 android:inputType="number"
                 android:maxLength="5"
                 android:maxLines="1" />
+
+
+            <Button
+                android:id="@+id/check_button"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/check_btn_shadow"
+                android:text="@string/btn_check"
+                android:textColor="@drawable/text_button"
+                android:layout_weight="1" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"></View>
         </LinearLayout>
     </ScrollView>
 
     <!--<LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:weightSum="1">
-
-        <Button
-            android:id="@+id/check_button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/check_btn_shadow"
-            android:text="@string/btn_check"
-            android:textColor="@drawable/text_button" />
+        android:orientation="vertical">
 
         <View
             android:id="@+id/bottom_menu_border"
@@ -101,6 +107,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="74dp"
+            android:id="@+id/menu"
             android:orientation="horizontal">
 
             &lt;!&ndash;<View&ndash;&gt;
@@ -140,11 +147,10 @@
                 android:id="@+id/menu_car_btn"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="false"
+                android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_auto_on"
-                android:visibility="visible" />
+                android:src="@drawable/menu_auto_on" />
 
             <View
                 android:layout_width="0dp"
