--- a/app/src/main/res/layout/activity_driver_result.xml
+++ b/app/src/main/res/layout/activity_driver_result.xml
@@ -22,6 +22,7 @@
             android:id="@+id/result_text_view" />
     </ScrollView>
 
+
     <!--<LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
@@ -105,14 +106,14 @@
         </LinearLayout>
     </LinearLayout>-->
 
-    <!-- <Button
-         android:id="@+id/check_button_back"
-         android:layout_width="match_parent"
-         android:layout_height="40dp"
-         android:background="@drawable/check_btn_shadow"
-         android:text="back"
-         android:textColor="@drawable/text_button"
-         android:layout_below="@+id/scrollView"
-         android:layout_alignParentLeft="true"
-         android:layout_alignParentStart="true" />-->
+    <!--<Button
+        android:id="@+id/check_button_back"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/check_btn_shadow"
+        android:text="@string/btn_back"
+        android:textColor="@drawable/text_button"
+        android:layout_below="@+id/scrollView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />-->
 </RelativeLayout>
