--- a/app/src/main/res/layout/activity_fine_result.xml
+++ b/app/src/main/res/layout/activity_fine_result.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/include" />
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -17,13 +19,6 @@
         android:layout_below="@+id/toolbar"
         android:scrollIndicators="right">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:orientation="vertical">
-
-        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
@@ -126,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/check_btn_shadow"
-        android:text="back"
+        android:text="@string/btn_back"
         android:textColor="@drawable/text_button"
         android:layout_above="@+id/NavigationLinearLayout"
         android:layout_alignParentLeft="true"
