--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:id="@+id/menu_driver_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Проверка водителя"
+            android:text="По водительскому удостоверению"
             android:textSize="16dp"
             android:layout_margin="15dp"
             android:textColor="@color/toolbarText"
