--- a/app/src/main/res/layout/activity_auto_history_result.xml
+++ b/app/src/main/res/layout/activity_auto_history_result.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/car_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +8,20 @@
 
     <include layout="@layout/toolbar" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_history"></com.google.android.gms.ads.AdView>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Проверка истории регистрации в ГИБДД"
+        android:text="@string/check_history_registration"
         android:id="@+id/textView4"
         android:textColor="@color/abc_btn_colored_borderless_text_material" />
 
