--- a/app/src/main/res/layout/activity_fine.xml
+++ b/app/src/main/res/layout/activity_fine.xml
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingTop="5dp"
-                android:text="Введите символы с картинки"
+                android:text="@string/label_captcha"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
