--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_main"></com.google.android.gms.ads.AdView>
 
     <LinearLayout
         android:id="@+id/menuLinearLayout"
