--- a/app/src/main/res/layout/activity_auto.xml
+++ b/app/src/main/res/layout/activity_auto.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/car_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,11 +8,20 @@
 
     <include layout="@layout/toolbar" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_main"></com.google.android.gms.ads.AdView>
+
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/NavigationLinearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolbar"
@@ -40,22 +50,13 @@
                 android:layout_weight="1"
                 android:maxLength="17" />
 
-            <!--<CheckBox
-                android:id="@+id/vin_check_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="VIN номер отсутствует"
-                android:textColor="#777777"
-                android:textSize="17dp" />-->
-
             <TextView
                 android:id="@+id/captcha_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingTop="5dp"
-                android:text="Введите символы с картинки"
+                android:text="@string/label_captcha"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -90,87 +91,4 @@
                 android:layout_weight="1"></View>
         </LinearLayout>
     </ScrollView>
-
-    <!--<LinearLayout
-        android:id="@+id/NavigationLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/bottom_menu_border"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/bottom_menu_border" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="74dp"
-            android:id="@+id/menu"
-            android:orientation="horizontal">
-
-            &lt;!&ndash;<View&ndash;&gt;
-                &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
-                &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
-                &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
-
-            &lt;!&ndash;<ImageButton&ndash;&gt;
-                &lt;!&ndash;android:id="@+id/menu_fine_btn"&ndash;&gt;
-                &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
-                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
-                &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
-                &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
-                &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
-                &lt;!&ndash;android:src="@drawable/menu_fine_off" />&ndash;&gt;
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
-
-            <ImageButton
-                android:id="@+id/menu_driver_btn"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_driver_off" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
-
-            <ImageButton
-                android:id="@+id/menu_car_btn"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_auto_on" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
-
-            &lt;!&ndash;<ImageButton&ndash;&gt;
-                &lt;!&ndash;android:id="@+id/menu_question_btn"&ndash;&gt;
-                &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
-                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
-                &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
-                &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
-                &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
-                &lt;!&ndash;android:src="@drawable/menu_question_off" />&ndash;&gt;
-
-            &lt;!&ndash;<View&ndash;&gt;
-                &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
-                &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
-                &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
-
-        </LinearLayout>
-    </LinearLayout>-->
 </RelativeLayout>
