формат клавиатуры для ввода даты

--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -78,6 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:inputType="date"
                     android:maxLength="10"
                     android:maxLines="1"></EditText>
 
