--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
     android:background="@color/toolbarBackground"
+    app:logo="@mipmap/ic_main"
+    app:title="@string/app_name"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:titleTextColor="@color/toolbarText" />
